--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -103,11 +103,13 @@
                 axios.post('/api/login', {
                     email: this.email,
                     password: this.password
+                }, {
+                    withCredentials: true // Important to include cookies in requests
                 }).then(response => {
-                    {#console.log('Login successful:', response.data);#}
-                    localStorage.setItem('token', response.data.token);
+                    console.log('Login successful:', response.data);
                     localStorage.setItem('login', "login");
-                    window.location.href = '/'; // Change to your desired route
+                    // Redirect to desired route after successful login
+                    {#window.location.href = '/';#}
                 }).catch(error => {
                     if (error.response) {
                         if (error.response.status === 401) {
@@ -119,7 +121,6 @@
                     } else {
                         this.errors.email = 'An error occurred. Please try again.';
                     }
-                    {#console.error('Login error:', error);#}
                 });
             }
         }
