--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -190,6 +190,9 @@
         <main class="py-10">
             <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                 <!-- Your content -->
+                {% block  content %}
+
+                {% endblock %}
             </div>
         </main>
     </div>
@@ -202,10 +205,14 @@
     const {createApp} = Vue;
 
     createApp({
+        delimiters: ['[[', ']]'], // Custom delimiters
         data() {
             return {
                 sidebarOpen: false,
-                profileDropdownOpen: false
+                profileDropdownOpen: false,
+
+                users: []
+
             };
         },
         mounted() {
@@ -213,6 +220,9 @@
                 alert('Login successful!');
                 localStorage.removeItem('login');
             }
+
+            this.fetchUsers();
+
         },
         methods: {
             toggleSidebar() {
@@ -231,6 +241,23 @@
                     .catch(error => {
                         console.error('Logout error:', error);
                     });
+            },
+            fetchUsers() {
+                axios.get('/api/users', {
+                    withCredentials: true // Include credentials if needed
+                })
+                    .then(response => {
+                        this.users = response.data;
+                        console.log(this.users); // Verify the data is correct
+                    })
+                    .catch(error => {
+                        console.error('Error fetching users:', error);
+                    });
+            },
+            getCookie(name) {
+                const value = `; ${document.cookie}`;
+                const parts = value.split(`; ${name}=`);
+                if (parts.length === 2) return parts.pop().split(';').shift();
             }
         }
     }).mount('#app');
